# lantern

./: .gitignore  README.md  pyproject.toml
native/: Package.swift  build.sh
native/Sources/lantern-native-describe/: main.swift
scripts/: eval_lantern.py
src/lantern/: backends.py  capture.py  cli.py  menubar.py  speech.py
tests/: conftest.py  test_backends.py  test_capture.py
