[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lantern"
version = "0.2.1"
description = "An on-device accessibility agent for macOS -- describes what's on screen or in front of the camera, out loud, entirely offline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Rajan Sharma" }]
dependencies = [
    "langchain-apple-foundation-models",
    "rumps",
    "pyobjc-framework-Vision",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-AVFoundation",
    "pyobjc-framework-Cocoa",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pillow>=10.0"]

[project.scripts]
lantern = "lantern.cli:main"
lantern-menubar = "lantern.menubar:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lantern"]
